--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <div class="arrival__center">
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic1.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic1.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -168,7 +168,7 @@
           </div>
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic2.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic2.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -204,7 +204,7 @@
           </div>
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic3.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic3.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -240,7 +240,7 @@
           </div>
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic7.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic7.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -288,7 +288,7 @@
                 <div class="arrival">
                   <div class="cart__like">
                     <div class="image__holder">
-                      <img src="./images/pic7.png" alt="" />
+                      <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic7.png" alt="" />
                     </div>
                     <div class="cart__details">
                       <h1>Polar Skate Co Devil T Shirt</h1>
@@ -343,7 +343,7 @@
                 <div class="arrival">
                   <div class="cart__like">
                     <div class="image__holder">
-                      <img src="./images/pic8.png" alt="" />
+                      <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic8.png" alt="" />
                     </div>
                     <div class="cart__details">
                       <h1>Polar Skate Co Devil T Shirt</h1>
@@ -398,7 +398,7 @@
                 <div class="arrival">
                   <div class="cart__like">
                     <div class="image__holder">
-                      <img src="./images/pic9.png" alt="" />
+                      <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic9.png" alt="" />
                     </div>
                     <div class="cart__details">
                       <h1>Polar Skate Co Devil T Shirt</h1>
@@ -453,7 +453,7 @@
                 <div class="arrival">
                   <div class="cart__like">
                     <div class="image__holder">
-                      <img src="./images/pic3.png" alt="" />
+                      <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic3.png" alt="" />
                     </div>
                     <div class="cart__details">
                       <h1>Polar Skate Co Devil T Shirt</h1>
@@ -521,25 +521,25 @@
           <div class="glide__bullets" data-glide-el="controls[nav]">
             <button class="glide__bullet" data-glide-dir="=0">
               <div class="thumbnail">
-                <img src="./images/pic7.png" alt="" />
+                <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic7.png" alt="" />
               </div>
             </button>
 
             <button class="glide__bullet" data-glide-dir="=1">
               <div class="thumbnail">
-                <img src="./images/pic8.png" alt="" />
+                <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic8.png" alt="" />
               </div>
             </button>
 
             <button class="glide__bullet" data-glide-dir="=2">
               <div class="thumbnail">
-                <img src="./images/pic9.png" alt="" />
+                <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic9.png" alt="" />
               </div>
             </button>
 
             <button class="glide__bullet" data-glide-dir="=3">
               <div class="thumbnail">
-                <img src="./images/pic3.png" alt="" />
+                <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic3.png" alt="" />
               </div>
             </button>
           </div>
@@ -566,7 +566,7 @@
         <div class="featured__center">
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic5.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic5.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -602,7 +602,7 @@
           </div>
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic4.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic4.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -638,7 +638,7 @@
           </div>
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic3.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic3.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -674,7 +674,7 @@
           </div>
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic2.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic2.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -710,7 +710,7 @@
           </div>
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic1.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic1.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -746,7 +746,7 @@
           </div>
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic10.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic10.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -782,7 +782,7 @@
           </div>
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic9.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic9.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -818,7 +818,7 @@
           </div>
           <div class="product">
             <div class="img__container">
-              <img src="./images/pic8.png" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/pic8.png" alt="" />
             </div>
             <div class="product__bottom">
               <div class="rating">
@@ -866,7 +866,7 @@
         <div class="blog__center">
           <div class="blog__box">
             <div class="img__cover">
-              <img src="./images/blog1.jpg" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/blog1.jpg" alt="" />
             </div>
             <div class="box__content">
               <h2>Here are the trends I see coming this fall</h2>
@@ -876,7 +876,7 @@
 
           <div class="blog__box">
             <div class="img__cover">
-              <img src="./images/blog2.jpg" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/blog2.jpg" alt="" />
             </div>
             <div class="box__content">
               <h2>Here are the trends I see coming this fall</h2>
@@ -886,7 +886,7 @@
 
           <div class="blog__box">
             <div class="img__cover">
-              <img src="./images/blog3.jpg" alt="" />
+              <img src="https://akankshadinde.github.io/Codeo.github.io/images/blog3.jpg" alt="" />
             </div>
             <div class="box__content">
               <h2>Here are the trends I see coming this fall</h2>
@@ -991,8 +991,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.4.1/glide.min.js"></script>
 
   <!-- Custom Script -->
-  <script src="./js/slider.js"></script>
-  <script src="./js/index.js"></script>
+  <script src="https://akankshadinde.github.io/Codeo.github.io/js/slider.js"></script>
+  <script src="https://akankshadinde.github.io/Codeo.github.io/js/index.js"></script>
 </body>
 
 </html>
